<resources>
    <string name="app_name">Reader</string>
    <string name="delete_previous">Delete previous measurement</string>
    <string name="uploading">Exporting data…</string>
    <string name="location_lbl">Location:</string>
    <string name="sensor_lbl">Sensor:</string>
    <string name="steady_info">This device should remain steady.</string>
    <string name="not_steady_info">This device should be moving.</string>
    <string name="overview">Overview of the experiment</string>
    <string name="tests_lbl">Tests in current mode:</string>
    <string name="delete_notif">Deleting last measurement…</string>
    <string name="delete_cancelled">Delete operation cancelled!</string>
    <string name="delete_success">Record successfully deleted!</string>
    <string name="no_nfc">The device does not has NFC hardware.</string>
    <string name="moving_label">Both devices should be moving</string>
    <string name="servicedesc">servicedesc</string>
    <string name="aiddescription">aiddescription</string>
    <string name="no_gps_head">No GPS</string>
    <string name="no_gps_body">GPS on this device seems to be switched off. The measurement will automatically be deleted on this device. Please delete it from the Reader device as well.</string>
    <string name="error">Error!</string>
    <string name="error_body">The tag was lost! No data will be saved.</string>
    <string name="bt_off_head">Bluetooth is OFF!</string>
    <string name="bt_off_body">The Bluetooth on this device seems to be switched off. The measurement will automatically be deleted on this device. Please delete it from the Reader device as well.</string>
    <string name="wifi_off_head">WiFi is OFF!</string>
    <string name="wifi_off_body">The WiFi on this device seems to be switched off. The measurement will automatically be deleted on this device. Please delete it from the Reader device as well.</string>
    <string name="success_save">Measurement stored!</string>
    <string name="fail_save">Measurement failed!</string>
    <string name="id">ID: %s</string>
    <string name="completion">%1$d/%2$d</string>
    <string name="sensor_txt">Sensor: %s</string>
    <string name="location_txt">Location: %s</string>
    <string name="wrong_card">You are using a not-associated Card!</string>
    <string name="connection_lost">The connection with the Card was lost. No data will be saved!</string>
    <string name="card_id">"Card ID: "</string>
    <string name="no_permissions">You cannot proceed without granting all the required permissions!</string>
    <string name="not_supported">This sensor does not seem to be supported on this device!</string>
    <string name="card_in_prev_transaction">The card is still in the previous transaction.</string>
    <string name="card_transaction_failed">Transaction failed on card side.</string>
    <string name="card_problem_general">"There was a problem with the card: "</string>
</resources>
