<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/moving_label" />

    <Space
        android:id="@+id/space0"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/switch1" />

    <TextView
        android:id="@+id/sensor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space0"
        android:layout_centerHorizontal="true"
        android:text="@string/sensor_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sensor_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sensor_label" />

    <Space
        android:id="@+id/space"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/sensor_spinner" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true"
        android:text="@string/location_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/location_label" />

    <Space
        android:id="@+id/space2"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/location_spinner" />

    <TextView
        android:id="@+id/tests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/tests_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/tests"
        android:text="/50"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space2"
        android:text="@string/overview"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/steady_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/overview"
        android:text="@string/steady_info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/sensor_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/steady_info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/location_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sensor_info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/reader_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/location_info"
        android:text="Reader ID:"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/this_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tests"
        android:layout_alignParentStart="true"
        android:text="ID:"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>